src/objects/RomeFieldSetSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings and developer names of field sets used in the Rome Application.</description>
    <fields>
        <fullName>ArtistOfferPrimaryEarnings__c</fullName>
        <defaultValue>&quot;ArtistOfferPrimaryEarnings&quot;</defaultValue>
        <inlineHelpText>Field set used for Artist Offer parameter form</inlineHelpText>
        <label>Artist Offer Primary Earnings</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtistOfferPrimarySummary__c</fullName>
        <defaultValue>&quot;ArtistOfferPrimarySummary&quot;</defaultValue>
        <inlineHelpText>Field set used for Artist Offer parameter form</inlineHelpText>
        <label>Artist Offer Primary Summary</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtistOfferPrimaryTopLeft__c</fullName>
        <defaultValue>&quot;ArtistOfferPrimaryTopLeft&quot;</defaultValue>
        <inlineHelpText>Field set used for Artist Offer parameter form</inlineHelpText>
        <label>Artist Offer Primary Top Left</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtistOfferPrimaryTopRight__c</fullName>
        <defaultValue>&quot;ArtistOfferPrimaryTopRight&quot;</defaultValue>
        <inlineHelpText>Field set used for Artist Offer parameter form</inlineHelpText>
        <label>Artist Offer Primary Top Right</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtistOfferSupportEarnings__c</fullName>
        <defaultValue>&quot;ArtistOfferSupportEarnings&quot;</defaultValue>
        <label>Artist Offer Support Earnings</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtistOfferSupportTopLeft__c</fullName>
        <defaultValue>&quot;ArtistOfferSupportTopLeft&quot;</defaultValue>
        <inlineHelpText>Field set used for Artist Offer parameter form</inlineHelpText>
        <label>Artist Offer Support Top Left</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtistOfferSupportTopRight__c</fullName>
        <defaultValue>&quot;ArtistOfferSupportTopRight&quot;</defaultValue>
        <inlineHelpText>Field set used for Artist Offer parameter form</inlineHelpText>
        <label>Artist Offer Support Top Right</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtistSettlementPrimaryOptionsLeft__c</fullName>
        <defaultValue>&quot;ArtistSettlementPrimaryOptionsLeft&quot;</defaultValue>
        <label>Artist Settlement Primary Options Left</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtistSettlementPrimaryOptionsRight__c</fullName>
        <defaultValue>&quot;ArtistSettlementPrimaryOptionsRight&quot;</defaultValue>
        <label>Artist Settlement Primary Options Right</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtistSettlementSupportOptions__c</fullName>
        <defaultValue>&quot;ArtistSettlementSupportOptions&quot;</defaultValue>
        <label>Artist Settlement Support Options</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Rome Field Set Settings</label>
</CustomObject>